Fix vertical alignment in main nav

--- a/styles.css
+++ b/styles.css
@@ -136,20 +136,22 @@ strong {
 @supports (flex-wrap: wrap) {
   @media (min-width: 62rem) {
     .site-header {
-      padding-top: 0;
+      padding-block-start: 0;
     }
     .masthead {
       display: flex;
+      align-items: center;
       justify-content: space-between;
       margin-inline: auto;
       max-inline-size: 75rem;
-      padding: 1rem 5%;
+      padding: 0.75rem 5%;
     }
     .main-nav-menu li {
       margin: 0;
     }
     .nav-list {
       display: flex;
+      align-items: center;
       gap: 1rem;
       justify-content: center;
       padding: 1rem 0;
@@ -161,6 +163,7 @@ strong {
       display: flex;
       gap: 1.5rem;
       justify-content: center;
+      padding-block-start: 0.3rem;
     }
   }
 }
